FEAT: FILTRO POR SKILL EX:./skill?nome=Java